# canopen_inventus

./: README.md
.github/workflows/: ci.yml
canopen_inventus_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
canopen_inventus_driver/include/canopen_inventus_driver/: battery.hpp  inventus_driver.hpp  lifecycle_inventus_driver.hpp
canopen_inventus_driver/include/canopen_inventus_driver/node_interfaces/: node_canopen_inventus_driver.hpp  node_canopen_inventus_driver_impl.hpp
canopen_inventus_driver/src/: battery.cpp  inventus_driver.cpp  lifecycle_inventus_driver.cpp
canopen_inventus_driver/src/node_interfaces/: node_canopen_inventus_driver.cpp
canopen_inventus_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
canopen_inventus_interfaces/msg/: Status.msg  VirtualBattery.msg
