<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_inventus_driver</name>
  <version>0.1.1</version>
  <description>ros2_canopen implementation of Inventus BMS driver</description>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>canopen</depend>
  <depend>canopen_core</depend>
  <depend>canopen_interfaces</depend>
  <depend>canopen_inventus_interfaces</depend>
  <depend>canopen_base_driver</depend>
  <depend>canopen_proxy_driver</depend>
  <depend>lely_core_libraries</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>canopen_master_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
